unpackaged/main/default/objects/Approval_History_ICS__c/Approval_History_ICS__c.object-meta.xml
<CustomObject>
    <label>Approval History ICS</label>
    <nameField>
        <displayFormat>AH-{00000000}</displayFormat>
        <label>Approval History ICS Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Approval History ICS</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>