unpackaged/main/default/objects/Approval_History_ICS__c/fields/AR_Adjustment_Amount__c.field-meta.xml
<CustomField>
    <fullName>AR_Adjustment_Amount__c</fullName>
    <formula>AR_Adjustments__r.Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AR Adjustment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>