unpackaged/main/default/objects/Approval_History_ICS__c/fields/Charges_Amount__c.field-meta.xml
<CustomField>
    <fullName>Charges_Amount__c</fullName>
    <formula>Charges__r.Total_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Charges Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>