unpackaged/main/default/objects/Approval_History_ICS__c/fields/Receipt_Reversal_Amount__c.field-meta.xml
<CustomField>
    <fullName>Receipt_Reversal_Amount__c</fullName>
    <formula>Receipt_Reversal__r.Receipt_Reversal_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Receipt Reversal Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>