unpackaged/main/default/objects/Approval_History_ICS__c/fields/Refunds_Amount__c.field-meta.xml
<CustomField>
    <fullName>Refunds_Amount__c</fullName>
    <formula>Refunds__r.Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Refunds Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>