unpackaged/main/default/objects/Approval_History_ICS__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Requestor</fullName>
            </value>
            <value>
                <fullName>LOB</fullName>
            </value>
            <value>
                <fullName>F&amp;R</fullName>
            </value>
            <value>
                <fullName>AR1</fullName>
            </value>
            <value>
                <fullName>CSO</fullName>
            </value>
            <value>
                <fullName>AR2</fullName>
            </value>
            <value>
                <fullName>Additional</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>