unpackaged/main/default/objects/Approval_History_ICS__c/fields/Transaction_Amount__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Amount__c</fullName>
    <formula>IF(NOT(ISBLANK(AR_Adjustments__c)),AR_Adjustments__r.Amount__c,
IF(NOT(ISBLANK(Credit_Memo__c)),Credit_Memo__r.Total_Amount__c,
IF(NOT(ISBLANK(Receipt_Reversal__c)),Receipt_Reversal__r.Receipt_Reversal_Amount__c,
IF(NOT(ISBLANK(Refunds__c)),Refunds__r.Amount__c,
123))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Transaction Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>